Added a fetch to get city name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="containter">
-        <h2> Greek restaurants in London</h2>
+        <h2> Greek restaurants in <span id="city"></span></h2>
         <section id="restaurants">
 
         </section>
